<resources>
	<string name="global_classmate">Classmate</string>
	<string name="global_authors">Created by The Poly Dogs</string>
	<string name="global_action_okay">Okay</string>
	<string name="global_action_cancel">Cancel</string>
	<string name="global_action_yes">Yes</string>
	<string name="global_action_no">No</string>
	<string name="email_address">Email Address</string>
	<string name="person_name">Name</string>
	<string name="password">Password</string>
	<string name="autologin">Stay signed in</string>
	<string name="login_action_login">Login</string>
	<string name="login_action_recover_account"><u>Forget Password?</u></string>
	<string name="login_action_register_account">Create an Account</string>
	<string name="login_action_sign_up"><u>Sign Up</u></string>
	<string name="example_email">johndoe@csupomona.edu</string>
	<string name="prompt_email">e-mail</string>
	<string name="example_name">John</string>
	<string name="example_password">password</string>
	<string name="example_group">Poly Dogs</string>
	<string name="login_welcome_back">Hello %1$s, welcome back!</string>
	<string name="dialog_login_load_title">Logging in</string>
	<string name="dialog_login_load">Validating user authentication&#8230;</string>
	<string name="dialog_login_error_title">Login Failed</string>
	<string name="dialog_login_error">Sorry, either your email or password was incorrect.</string>
	<string name="recovery_action_recover">Recover Password</string>
	<string name="dialog_recovery_load_title">Contacting Server</string>
	<string name="dialog_recovery_load">Trying to send you an email with your new password&#8230;</string>
	<string name="dialog_recovery_success_title">Email Sent</string>
	<string name="dialog_recovery_success">We have sent you an email containing your new password.</string>
	<string name="dialog_recovery_error_title">Recovery Failed</string>
	<string name="dialog_recovery_error">Sorry, we do not have any accounts with that email.</string>
	<string name="registration_action_register">Create Account</string>
	<string name="registration_action_forgot_password">Forgot Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="passwords_match">Passwords Match</string>
	<string name="passwords_do_not_match">Passwords Do NOT Match</string>
	<string name="dialog_register_load_title">Contacting Server</string>
	<string name="dialog_register_load">Attempting to register your new account&#8230;</string>
	<string name="dialog_register_error_title">Registration Failed</string>
	<string name="dialog_register_error">We are sorry, there is already an account with that email. Did you forget your password?</string>
	<string name="button_create_schedule">Create Your First Schedule</string>
	<string name="nd_feed_header">Feeds</string>
	<string name="nd_feed_events">Events</string>
	<string name="nd_feed_activity">Recent Activity</string>
	<string name="nd_feed_news">News</string>
	<string name="nd_schedule_header">Schedule</string>
	<string name="nd_schedule_view">View Schedule</string>
	<string name="nd_schedule_event_add">Add Class or Event</string>
	<string name="nd_social_header">Social</string>
	<string name="nd_social_friends">Friends</string>
	<string name="nd_social_groups">Groups</string>
	<string name="nd_social_books">Book Accomplice</string>
	<string name="nd_app_header">Application</string>
	<string name="nd_app_settings">Settings</string>
	<string name="nd_app_logout">Logout</string>
	<string name="dialog_logout_title">Logout?</string>
	<string name="dialog_logout">Are you sure you want to log out?</string>
   	<string name="createSchedule">Create Schedule</string>
   	<string name="setActiveSchedule">Set Active Schedule</string>
	<string name="schedule_tab_daily">Daily</string>
	<string name="schedule_tab_weekly">Weekly</string>
	<string name="dialog_schedule_no_class_added">You currently have no classes added to your schedule.</string>
	<string name="dialog_schedule_no_class_view">No classes to be viewed.</string>
	<string name="dialog_schedule_create_schedule">You have not created a schedule yet. You must create at least one schedule before attempting to add content. Create one now!</string>
	<string name="add_class_event_addclass">Add Class</string>
	<string name="add_class_event_addevent">Add Event</string>
	<string name="add_class_event_search_event">Search Event</string>
	<string name="dialog_event_acceptance_title">Added an Event</string>
	<string name="dialog_event_acceptance">You have added %1$s to your schedule.</string>
	<string name="example_event">CPP BBQ</string>
	<string name="friends_tab_list">My Friends</string>
	<string name="friends_tab_requests">Requests</string>
	<string name="friends_tab_search">Search</string>
	<string name="friends_add_friend">Add Friend</string>
	<string name="friends_list_empty">Your friends list is empty. To add friends, go to the \'%1$s\' tab.</string>
	<string name="friend_requests_empty">You have no friend requests.</string>
	<string name="friend_search_hint">Enter an email address or username to search for:</string>
	<string name="dialog_friend_request_title">Request Sent</string>
	<string name="dialog_friend_request">A friend request has been dispatched to %1$s.</string>
	<string name="dialog_friend_remove_title">Hold on a sec&#8230;</string>
	<string name="dialog_friend_remove">Would you like to remove this friend from seeing your schedule? If so press \'%1$s\', otherwise pressing \'%2$s\' will only remove the person from your friends list.</string>
	<string name="groups_tab_list">My Groups</string>
	<string name="groups_tab_search">Search</string>
	<string name="groups_list_empty">You do not belong to any groups yet. To join a group press \'%1$s\', otherwise press \'%2$s\' to create a new one.</string>
	<string name="groups_join_group">Join a Group</string>
	<string name="groups_create_group">Create a Group</string>
	<string name="search_groups_hint">Enter the name of the group you\'re looking for:</string>
	<string name="dialog_group_create_title">What would you like to name your group?</string>
	<string name="dialog_group_create">null</string>
	<string name="dialog_group_create_error_title">Group Exists</string>
	<string name="dialog_group_create_error">There is already a group named \'%1$s\'!</string>
	<string name="dialog_group_remove_title">Group Left</string>
	<string name="dialog_group_remove">You have sucessfully left the \'%1$s\'!</string>
	<string name="dialog_group_join_title">Group Joined</string>
	<string name="dialog_group_join">You have sucessfully joined the \'%1$s\'!</string>
	<string name="manage_group">Manage Group</string>
	<string name="email_group">Email Group</string>
	<string name="email_group_subject">Subject</string>
	<string name="email_group_message">Message</string>
	<string name="email_group_send">Send</string>
	<string name="dialog_email_group_sending_title">Sending&#8230;</string>
	<string name="dialog_email_group_sending">Sending&#8230;</string>
	<string name="dialog_email_group_sent_title">Email Sent</string>
	<string name="dialog_email_group_sent">Your email has been sent to your group!</string>
	<string name="email_group_ready">You are ready to send the email</string>
	<string name="email_group_missing_field">Subject and message required!</string>
	<string name="add_member">Add Member</string>
	<string name="add_member_hint">Enter an email address or username to search for:</string>
	<string name="oldPass">Old Password</string>
   	<string name="newPass">New Password</string>
   	<string name="changePass">Change Password</string>
   	<string name="changePassLoading">Changing Your Password</string>
   	<string name="confirmPass">Confirm New Password</string>
	<string name="add_class">Add Class</string>
	<string name="schedule_field">%1$s: </string>
	<string name="schedule_term">Term</string>
	<string name="schedule_college">College</string>
	<string name="schedule_course">Course</string>
	<string name="schedule_time">Time</string>
	<string name="schedule_lecturer">Lecturer</string>
	<string name="section_details">Section Details</string>
	<string name="invalid_event_header_hint">Sorry</string>
	<string name="invalid_event_title_hint">Please give your event a title</string>
	<string name="invalid_event_description_hint">Please give your event a description</string>
	<string name="invalid_event_dates_hint">Please correct the event dates</string>
	<string name="invalid_event_times_hint">Please correct the event times</string>
	<string name="books_tab_buy">Buy Books</string>
	<string name="books_tab_sell">Sell Books</string>
	<string name="books_tab_admin">Admin Panel</string>
	<string name="book_title">Book Title:</string>
	<string name="book_classname">What class is this book for?</string>
	<string name="book_condition">What condition is the book in?</string>
	<string name="book_price">How much are you selling this book for?</string>
	<string name="book_sell_button">Sell Book</string>
	<string name="listingBook">Listing your book!</string>
	<string name="listingBookLoading">Your book is being listed as we speak!</string>
	<string name="book_list_empty">There are no books to be listed.</string>
	<string name="book_comment_list_empty">There are no comments to be listed.</string>
   	<string name="dialog_change_profile_pic">Change profile picture</string>
   	<string name="action_camera">Take picture with camera</string>
	<string name="action_gallery">Choose from gallery</string>
	<string name="activity_feed_empty">There has been no recent activity by your friends</string>
	<string name="friend_added_event">%1$s added %2$s as a friend</string>
	<string name="class_added_event">%1$s added %2$s to their schedule</string>
	<string name="news_feed_empty">There are no recent news items</string>
	<string name="calendar_events_feed_empty">There are no upcomming</string>
</resources>