<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:baselineAligned="false"
		android:background="@color/custom_dark_back"
		android:padding="10dp"
	>
		<TextView
			style="@style/style_textview"
			android:text="@string/person_name"
			android:labelFor="@+id/etUsername"
			android:textColor="@color/white"
		/>
	
		<EditText
		    android:id="@+id/etUsername"
		    style="@style/style_edittext"
		    android:layout_marginBottom="@dimen/login_component_spacing"
		    android:hint="John101"
		/>
	
		<TextView
			style="@style/style_textview"
			android:text="@string/email_address"
			android:labelFor="@+id/etEmailAddress"
			android:textColor="@color/white"
		/>
		<EditText
			style="@style/style_edittext"
			android:id="@+id/etEmailAddress"
			android:layout_marginBottom="@dimen/login_component_spacing"
			android:hint="John101@gmail.com"
		/>
		<TextView
			style="@style/style_textview"
			android:text="@string/password"
			android:labelFor="@+id/etPassword"
			android:textColor="@color/white"
		/>
		<EditText
			style="@style/style_edittext"
			android:id="@+id/etPassword"
			android:layout_marginBottom="@dimen/login_component_spacing"
			 android:hint="******"
		/>
		<TextView
			style="@style/style_textview"
			android:text="@string/confirm_password"
			android:labelFor="@+id/etConfirmPassword"
			android:textColor="@color/white"
		/>
		<EditText
			style="@style/style_edittext"
			android:id="@+id/etConfirmPassword"
			android:layout_marginBottom="@dimen/login_component_spacing"
			 android:hint="******"
		/>
		<TextView
			style="@style/style_textview"
			android:id="@+id/tvPasswordMatcher"
			android:layout_width="match_parent"
			android:gravity="center"
			android:textStyle="bold"
			android:layout_marginBottom="@dimen/login_component_spacing"
		/>
		<CheckBox
			style="@style/style_checkbox"
			android:id="@+id/cbAutoLogin"
			android:text="@string/autologin"
			android:layout_marginBottom="@dimen/login_component_spacing"
		/>
		<Button
			style="@style/style_button"
			android:id="@+id/btnRegister"
			android:text="@string/registration_action_register"
			android:textColor="@color/white"
		/>
	</LinearLayout>
</ScrollView>