<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/custom_dark_back"
>
		<TextView
			android:id="@+id/tvToday"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:singleLine="true"
			android:ellipsize="marquee"
			android:marqueeRepeatLimit ="marquee_forever"
			android:scrollHorizontally="true"
			android:focusable="false"
		/>
        <LinearLayout
                android:id="@+id/llProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                android:background="@android:color/transparent"
        >
                <ProgressBar
                        style="Widget.ProgressBar.Large.Inverse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                >
                </ProgressBar>
        </LinearLayout>

       <LinearLayout
                android:id="@+id/llNoClass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/dashed_border"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:visibility="gone"
        >
                        <TextView
                                style="@style/style_textview"
                                android:text="@string/dialog_schedule_no_class_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                        />
                        
        </LinearLayout>

          <LinearLayout
                android:id="@+id/llNoSchedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/dashed_border"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:visibility="gone"
        >
                        <TextView
                                style="@style/style_textview"
                                android:text="@string/dialog_schedule_create_schedule"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                        />
                        
                         <EditText
                                style="@style/style_edittext"
                                android:id="@+id/etScheduleName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                        />
                        
                        <Button
                                style="@style/style_button"
                                android:id="@+id/btnAddSchedule"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/button_create_schedule"
                        />

        </LinearLayout>
        
        <LinearLayout
                android:id="@+id/llSchedule"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/custom_dark_back"
                android:visibility="gone"
        >
                <LinearLayout
                        android:id="@+id/llProgressBarClasses"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone"
                        android:background="@android:color/transparent"
                >
                        <ProgressBar
                                style="Widget.ProgressBar.Large.Inverse"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                        >
                        </ProgressBar>
                </LinearLayout>

               <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@android:color/transparent"
                >
                   <!--     <ListView
                                android:id="@+id/lvSchedule"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:background="@color/custom_dark_back"
                                android:divider="@color/custom_divider"
                                android:dividerHeight="1dp"
                        >
                        </ListView>   -->
                        <GridView
                            android:id="@+id/gridSchedule"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:numColumns="2"
                            >
                        </GridView>
                </LinearLayout>
        </LinearLayout>
</LinearLayout>